--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/runtime": "^7.0.0-beta.46",
-    "@nekr/css-components": "git+https://github.com/NekR/css-components.git",
+    "@nekr/css-components": "^1.0.0",
     "autoprefixer": "^8.0.0",
     "babel-eslint": "~8.2.2",
     "babel-loader": "8.0.0-beta.0",
@@ -41,6 +41,7 @@
     "eslint": "~4.18.0",
     "eslint-plugin-babel": "~4.1.2",
     "eslint-plugin-react": "~7.6.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "~1.1.6",
     "html-webpack-plugin": "~2.30.1",
     "husky": "~0.14.3",
