--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "~1.1.6",
     "html-webpack-plugin": "~2.30.1",
-    "husky": "~0.14.3",
+    "http-server": "^0.11.1",
+    "husky": "^0.14.3",
     "lint-staged": "~7.0.0",
     "postcss-conditionals": "^2.1.0",
     "postcss-import": "^11.1.0",
